[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88.0"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]

[workspace.dependencies]
# Internal dependencies
cattle-common = { path = "cattle-common", version = "0.0.1" }

# External dependencies
anyhow = { version = "1.0", default-features = false }
axum = { version = "0.8.8", default-features = false }
chrono = { version = "0.4.43", default-features = false }
clap = { version = "4.5", default-features = false }
clap_complete = { version = "4.5", default-features = false }
hex = { version = "0.4.3", default-features = false }
http = { version = "1.4.0", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
hyper = { version = "1.8.1", default-features = false }
p384 = { version = "0.13.1", default-features = false }
reqwest = { version = "0.13.2", default-features = false }
rstest = { version = "0.26.1", default-features = false }
serde = { version = "1.0", default-features = false }
sysinfo = { version = "0.38.2", default-features = false }
tokio = { version = "1.49.0", default-features = false }
toml = { version = "1.0.3", default-features = false }
users = { version = "0.11.0", default-features = false }
uuid = { version = "1.21.0", default-features = false }

[workspace]
resolver = "2"
members = ["cattle-common", "cattle-herder", "cattle-monitor"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
