[package]
name = "cattle-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive", "std"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
toml = { workspace = true, features = ["default", "parse"] }
rstest = { workspace = true }