[package]
name = "cattle-herder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "../build.rs"

[dependencies]
# Internal dependencies
cattle-common = { workspace = true }

# External dependencies
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "env", "help", "std", "suggestions"] }
serde = { workspace = true, features = ["derive", "std"] }
sysinfo = { workspace = true, features = ["default", "multithread"] }
toml = { workspace = true, features = ["default", "parse"] }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
vergen = { workspace = true, features = ["build"] }
vergen-gitcl = { workspace = true, features = ["build"] }
