[package]
name = "cattle-herder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
build = "../build.rs"

[dependencies]
# Internal dependencies
cattle-common = { workspace = true }

# External dependencies
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "env", "help", "std", "suggestions"] }
p384 = { workspace = true, features = ["ecdsa", "std", "pem"] }
serde = { workspace = true, features = ["derive", "std"] }
sysinfo = { workspace = true, features = ["default", "multithread"] }
toml = { workspace = true, features = ["default", "parse"] }
users = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }
