[package]
name = "cattle-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
build = "../build.rs"

[dependencies]
# Internal dependencies
cattle-common = { workspace = true }

# External dependencies
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "env", "help", "std", "suggestions"] }
serde = { workspace = true, features = ["derive", "std"] }
toml = { workspace = true, features = ["default", "parse"] }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }
